Add components, add tailwind

--- a/app/views/ingredients/index.html.slim
+++ b/app/views/ingredients/index.html.slim
@@ -1,6 +1,4 @@
-p style="color: green" = notice
-
-h1 Moje suroviny
+- content_for :title, "Moje suroviny"
 
 = link_to "New ingredient", new_ingredient_path
 
