--- a/app/views/ingredients/_form.html.slim
+++ b/app/views/ingredients/_form.html.slim
@@ -1,23 +1,8 @@
-= form_with(model: ingredient) do |form|
-  div
-    = form.label :name
-    = form.text_field :name
-  div
-    = form.label :description
-    = form.text_field :description
-
-  div
-    = form.collection_select :measurement_id, Measurement.all, :id, :name
-
-  div
-    = form.collection_select :category_id, IngredientCategory.all, :id, :name
-
-  - if ingredient.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(ingredient.errors.count, "error")} prohibited this ingredient from being saved:"
-      ul
-        - ingredient.errors.each do |error|
-          li = error.full_message
+= simple_form_for @ingredient do |form|
+  = form.input :name
+  = form.input :description
+  = form.association :measurement
+  = form.association :category
 
   div
     = form.submit
