--- a/app/views/ingredients/index.html.slim
+++ b/app/views/ingredients/index.html.slim
@@ -1,10 +1,13 @@
-- content_for :title, "Moje suroviny"
+- content_for :title, "moje suroviny"
 
-= link_to "New ingredient", new_ingredient_path
+= button_link "přidat surovinu", new_ingredient_path
 
-#ingredients
-  - @ingredients.each do |ingredient|
-    == render ingredient
-    p
-      = link_to "Show this ingredient", ingredient
-
+= table @ingredients do |t|
+  = t.column :name do |ingredient|
+    = link_to ingredient.name, ingredient
+  = t.column :category do |ingredient|
+    - if ingredient.category.present?
+      = ingredient.category&.name
+  = t.column :measurement do |ingredient|
+    - if ingredient.measurement.present?
+      = ingredient.measurement&.name
