--- a/app/views/ingredients/new.html.slim
+++ b/app/views/ingredients/new.html.slim
@@ -1,8 +1,6 @@
-h1 New ingredient
+- content_for :title, "přidat surovinu"
 
 == render "form", ingredient: @ingredient
-
-br
 
 div
   = link_to "Back to ingredients", ingredients_path
