--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -7,7 +7,7 @@ nav.mt-4.mb-4
             = render "shared/navbar_link", link: dashboard_path, text: "domů"
             = render "shared/navbar_link", link: ingredients_path, icon: "plant", text: "suroviny"
             = render "shared/navbar_link", link: recipes_path, icon: "utensils", text: "recepty"
-            = render "shared/navbar_link", link: "/tasks", icon: "calendar", text: "akce"
+            = render "shared/navbar_link", link: events_path, icon: "calendar", text: "akce"
             = render "shared/navbar_link", link: "/arts", icon: "book-open", text: "databáze receptů"
 
         ul.flex.ml-auto.cursor-pointer
