--- a/app/views/recipes/_recipe.html.slim
+++ b/app/views/recipes/_recipe.html.slim
@@ -1,2 +1,2 @@
 div id="#{dom_id recipe}"
- = link_to recipe.name, recipe_path(recipe)
+ = link_to recipe.name, recipe_path(recipe), class: "break-normal"
