--- a/app/views/recipes/_recipe_card.html.slim
+++ b/app/views/recipes/_recipe_card.html.slim
@@ -1,5 +1,5 @@
 .border.rounded.border-emerald-500.p-4.m-4
-    .text-center
+    .text-center.text-xl.text-emerald-900
         = link_to recipe.name, recipe
     div
         = recipe.category&.name
