--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -1,30 +1,36 @@
 - content_for :title, @recipe.name
 
-= button_link "upravit", edit_recipe_path(@recipe)
+- content_for :header do
+  = @recipe.name
+  span.float-right.text-base
+    = action_button_to "smazat", recipe_path(@recipe), method: :delete, data: { turbo_confirm: "Opravdu chcete smazat recept?" }
+    = button_link "upravit", edit_recipe_path(@recipe)
 
 #details
   p
     = @recipe.category&.name
   p
     - @recipe.labels.each do |label|
-      span.label.label-primary.me-3 = label.visible_name
+      = label_badge(label)
 
-#ingredients
-  h2.text-2xl = "na #{@portion_count} porcí"
-  = table @recipe.recipe_ingredients do |t|
-    = t.column :název do |r_ingredient|
-      = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
-    = t.column :množství do |r_ingredient|
-      = r_ingredient.amount * @portion_count
-      = " "
-      = r_ingredient.ingredient.measurement&.name
+.grid.grid-cols-2
+  #ingredients
+    h2.text-2xl = "na #{@portion_count} porcí"
+    = table @recipe.recipe_ingredients do |t|
+      = t.column :název do |r_ingredient|
+        = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
+      = t.column :množství do |r_ingredient|
+        = (r_ingredient.amount * @portion_count).round(1)
+        = " "
+        = r_ingredient.ingredient.measurement&.name
 
-#description 
-  h2.text-2xl = "Popis"
-  = @recipe.description.html_safe
+  div
+    #description 
+      h2.text-2xl = "Popis"
+      = @recipe.description.html_safe
 
-#tasks
-  h2.text-2xl = "Úkoly"
-  - @recipe.tasks.each do |task|
-    li = task.name
-    / = link_to task, task
+    #tasks
+      h2.text-2xl = "Úkoly"
+      - @recipe.tasks.each do |task|
+        li = task.name
+        / = link_to task, task
