--- a/app/components/badges/label_badge_component.html.slim
+++ b/app/components/badges/label_badge_component.html.slim
@@ -1,4 +1,4 @@
 / needs Label
 
-span.ps-2.pe-2.pt-0.pb-0.m-1.break-keep.rounded class=bg_class
+span.px-2.py-1.m-1.break-keep.rounded-md class="#{bg_class} #{kwargs[:class]}"
     = label.visible_name
