--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -5,19 +5,20 @@
   br
   = "#{@event.duration} dní"
   br
-  = "pro #{@event.people_count} účastníků"
+  = "pro #{@event.people_count} účastníků (#{@event.portion_count} porcí)"
 
 #days
-  .grid.grid-cols-7.gaps-4
+  .grid.grid-cols-7.gap-3
     - @event.daily_plans.each do |daily_plan|
-      div.w-max.border.border-emerald-600.text-center id="#{dom_id(daily_plan)}-card"
+      div.border.border-emerald-600.text-center id="#{dom_id(daily_plan)}-card"
         div.text-xl
           = link_to daily_plan_path(daily_plan) do 
             = "#{I18n.translate("date.day_names")[daily_plan.date.wday]}"
         = "#{daily_plan.date.strftime("%d.%m.%Y")}"
-        div id="#{dom_id(daily_plan)}-recipes"
-        - daily_plan.recipes.each do |recipe|
-          = link_to recipe.name, recipe, class: "truncate"
+        div.overflow-hidden id="#{dom_id(daily_plan)}-recipes"
+          - daily_plan.recipes.each do |recipe|
+            = link_to recipe.name, recipe, class: "truncate"
+            br
           / = render partial: "recipes/recipe", locals: {recipe: recipe}
 
       
