--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,5 +1,5 @@
 nav.mt-4.mb-4
-    .flex.flex-wrap.items-center.mx-auto.rounded-3xl.py-3.px-4.border.border-2.border-green-900
+    .flex.flex-wrap.items-center.py-3.px-4.mx-auto.border.border-0.border-b-2.border-green-900
         a href="/"
             / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
      
