--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -4,7 +4,7 @@
         - color_classes = "bg-blue-100 border-blue-500"
     - elsif type.to_sym == :error
         - color_classes = "bg-red-100 border-red-500"
-    div class="border-t-4 rounded-b px-4 py-3 shadow-md #{color_classes}" role="alert"
+    div class="absolute border-t-4 rounded-b px-4 py-3 shadow-md #{color_classes} right-10" role="alert"
         div class="flex"
             div class="py-1"
                 / svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-blue-500 mr-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"
