--- a/app/views/shared/_navbar_link.html.slim
+++ b/app/views/shared/_navbar_link.html.slim
@@ -4,7 +4,7 @@
 
 
 a href=link class=classes 
-    li.rounded-md.py-2.px-2.hover:bg-gray-200
-        span.block.py-4.pl-3.pr-4.text-emerald-700.rounded.hover:text-gray-900.md:hover:bg-transparent.md:border-0.md:p-0.dark:text-white.md:dark:hover:text-white.dark:hover:bg-gray-700.dark:hover:text-white.md:dark:hover:bg-transparent
+    li.rounded-md.py-2.px-2.hover:underline.hover:underline-offset-4.hover:decoration-emerald-600
+        span.block.py-4.pl-3.pr-4.text-emerald-700.rounded.md:border-0.md:p-0
             = svg(icon.to_s, class: "inline me-1 text-white") if icon.present?
             = text if text.present?
