--- a/app/views/daily_plans/_tasks.html.slim
+++ b/app/views/daily_plans/_tasks.html.slim
@@ -5,10 +5,12 @@
             - daily_plan.day_tasks.each do |task|
                 li.mb-1
                     .grid.grid-cols-4
-                        div = task.name
-                        div.italic = task.description
-                        div
-                            = action_button_to "smazat", task, type: :dangerous, method: :delete, data: { turbo_confirm: "Opravdu smazat?" }, class: "btn btn-danger"
+                        = simple_form_for task, method: :patch, :html=> {class: "inline col-span-2", data: { controller: "form" }} do |form|
+                            div.grid.grid-cols-2
+                                div = form.input :name, label: false, :input_html => { data: { action: "change->form#submit" } }
+                                div.italic
+                                    = form.input :description, label: false, :input_html => { data: { action: "change->form#submit" } }
+                        div = action_button_to "smazat", task, type: :dangerous, method: :delete, data: { turbo_confirm: "Opravdu smazat?" }, class: "btn btn-danger"
     #add-task
         h2.text-xl.font-bold.mb-2 přidat úkol
         = form_tag daily_plan_tasks_path(daily_plan_id: daily_plan.id), method: :post, class: "grid grid-cols-4" do
@@ -16,4 +18,3 @@
             div = text_area_tag :description, nil, placeholder: "např. pekárna ve Vrchlabí"
             
             div = submit_tag "přidat", class: Buttons::ButtonDefaults::DEFAULT_BUTTON_CLASSES[:primary]
-
