--- a/app/views/events/_form.html.slim
+++ b/app/views/events/_form.html.slim
@@ -1,4 +1,9 @@
-= form_with(model: event) do |form|
+= simple_form_for event do |form|
+  = form.input :name
+  = form.input :date_from
+  = form.input :date_to
+  = form.input :people_count
+
   - if event.errors.any?
     div style="color: red"
       h2 = "#{pluralize(event.errors.count, "error")} prohibited this event from being saved:"
