--- a/app/views/events/edit.html.slim
+++ b/app/views/events/edit.html.slim
@@ -1,10 +1,7 @@
-h1 Editing event
+= content_tag :title do
+  = "upravit #{@event}"
 
-== render "form", event: @event
+= turbo_frame_tag dom_id(@event) do
+  = render "form", event: @event
 
-br
-
-div
-  => link_to "Show this event", @event
-  '|
-  =< link_to "Back to events", events_path
+= link_to "zpět", @event
