--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,10 +24,11 @@ html
   body.mx-auto.sm:px-4.max-w-screen-2xl
     = render("shared/flash")
     = render("shared/navbar")
-    h1.text-3xl.text-strong.mb-2
-      - if content_for?(:header)
-        = yield(:header)
-      - else
-        = yield(:title)
+    - unless local_assigns[:override_title].present? && local_assigns[:override_title] == true
+      h1.text-3xl.text-strong.mb-2
+        - if content_for?(:header)
+          = yield(:header)
+        - else
+          = yield(:title)
     = yield
     / = render("shared/mobile_navbar")
