Add recipe tasks

--- a/app/components/badges/label_badge_component.html.slim
+++ b/app/components/badges/label_badge_component.html.slim
@@ -1,4 +1,4 @@
 / needs Label
 
-span.px-2.py-1.m-1.break-keep.rounded-md class="#{bg_class} #{kwargs[:class]}"
+span.px-2.py-1.m-1.rounded-md.whitespace-nowrap class="#{bg_class} #{kwargs[:class]}"
     = label.visible_name
