--- a/app/views/published_recipes/index.html.slim
+++ b/app/views/published_recipes/index.html.slim
@@ -13,6 +13,6 @@
 
 
 #published-recipes
-  .grid.grid-cols-3.gap-4
+  .md:grid.md:grid-cols-3.md:gap-4
     - @published_recipes.each do |recipe|
       = render partial: "recipes/recipe_card", locals: {recipe: recipe}
