Enhance recipe portion count change

--- a/app/views/dashboards/show.html.slim
+++ b/app/views/dashboards/show.html.slim
@@ -2,8 +2,12 @@
 
 .grid.grid-cols-3.gap-4.mt-4.text-center
     .border.border-emerald-600.rounded-lg.shadow.p-4
-        | založ 
-        = link_to "novou událost", new_event_path, class: "text-emerald-600 font-bold"
+        - if @nearest_future_event.present?
+            | podívej se na svou nejbližší akci: 
+            = link_to @nearest_future_event.name, @nearest_future_event, class: "text-emerald-600 font-bold"    
+        - else
+            | založ 
+            = link_to "novou událost", new_event_path, class: "text-emerald-600 font-bold"
     .border.border-emerald-600.rounded-lg.shadow.p-4
         | inspiruj se v 
         = link_to "databázi receptů", published_recipes_path, class: "text-emerald-600 font-bold"
