--- a/app/views/recipes/index.html.slim
+++ b/app/views/recipes/index.html.slim
@@ -1,14 +1,21 @@
 - content_for :title, "recepty"
 
-= button_link "přidat recept", new_recipe_path
 
-= table @recipes do |t|
-  = t.column :recept do |recipe|
-    = link_to recipe.name, recipe, class: "font-bold text-emerald-600"
-    = " (rozpracováno)" if recipe.draft?
-  = t.column :kategorie do |recipe|
-    = recipe.category&.name
-  = t.column :specifika do |recipe|
-    - recipe.labels.each do |label|
-      = label_badge(label, class: "text-black")
+div.me-5
+  - placeholder = Current.user.recipes.order("RAND()").limit(1).first.name
+  = simple_form_for "", url: recipes_path, method: :get, html: {class: "inline-block", data: {"controller": "form", "turbo-frame": "recipes"}} do |f|
+    = f.input :query, label: false, placeholder: "např. #{placeholder}", input_html: {class: "rounded-md focus:ring-green-700 focus:border-green-700", data: {action: "input->form#submit"}, value: params[:name]}, autofocus: true
+  = button_link "přidat recept", new_recipe_path, class: "float-right"
+
+= turbo_frame_tag :recipes
+  = table @recipes do |t|
+    = t.column :recept do |recipe|
+      = link_to recipe.name, recipe, class: "font-bold text-emerald-600", data: {turbo_frame: "_top"}
+      = " (rozpracováno)" if recipe.draft?
+    = t.column :kategorie do |recipe|
+      = recipe.category&.name
+    = t.column :specifika do |recipe|
+      - recipe.labels.each do |label|
+        = label_badge(label, class: "text-black")
+    = t.pager @pagy
 
