--- a/app/views/recipes/_form.html.slim
+++ b/app/views/recipes/_form.html.slim
@@ -1,4 +1,7 @@
-= form_with(model: recipe) do |form|
+= simple_form_for recipe do |form|
+  = form.input :name
+  = form.input :description
+
   - if recipe.errors.any?
     div style="color: red"
       h2 = "#{pluralize(recipe.errors.count, "error")} prohibited this recipe from being saved:"
