--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -24,21 +24,23 @@ div
         = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: "heart"
 
 .md:grid.md:grid-cols-3
-  #ingredients
-    = table @recipe.recipe_ingredients do |t|
-      = t.column :název do |r_ingredient|
-        = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
-      = t.column "množství na #{@portion_count} porcí" do |r_ingredient|
-        = (r_ingredient.amount * @portion_count).round(1)
-        = " "
-        = r_ingredient.ingredient.measurement&.name
+  div
+    = turbo_frame_tag "#{dom_id(@recipe)}-ingredients"
+      = table @recipe.recipe_ingredients do |t|
+        = t.column :název do |r_ingredient|
+          = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
+        = t.column "množství na #{@portion_count} porcí" do |r_ingredient|
+          = (r_ingredient.amount * @portion_count).round(1)
+          = " "
+          = r_ingredient.ingredient.measurement&.name
+    
     | zobrazit pro
     br
     = button_link "1 porci", recipe_path(@recipe, portion_count: 1)
     = button_link "12 porcí", recipe_path(@recipe, portion_count: 12)
-    = form_tag recipe_path(@recipe), method: :get, class: "inline" do
-      = text_field_tag :portion_count, params[:portion_count], class: "w-12 h-8 me-2 border border-green-600 rounded-md"
-      = submit_tag "porcí"
+    = form_tag recipe_path(@recipe), method: :get, class: "inline", data: {controller: "form", "form-debounce-timeout-value": 0, "turbo-frame": "#{dom_id(@recipe)}-ingredients-"} do
+        = text_field_tag :portion_count, params[:portion_count], class: "w-12 h-8 me-2 border border-green-600 rounded-md", data: {action: "input->form#submit"}, autofocus: true, onfocus: "this.setSelectionRange(this.value.length,this.value.length);"
+        | porcí
 
   div.col-span-2
     #description.mb-3 
