--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -35,6 +35,8 @@ div
         = t.column :název do |r_ingredient|
           = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
         = t.column "množství na #{@portion_count} porcí" do |r_ingredient|
+          = formatted_amount_with_unit(r_ingredient, @portion_count)
+          = " | "
           = (r_ingredient.amount * @portion_count).round(1)
           = " "
           = r_ingredient.ingredient.measurement&.name
