--- a/app/views/events/edit.html.slim
+++ b/app/views/events/edit.html.slim
@@ -1,5 +1,5 @@
 = content_tag :title do
-  = "upravit #{@event}"
+  = "upravit #{@event.name}"
 
 = turbo_frame_tag dom_id(@event) do
   = render "form", event: @event
