--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -4,7 +4,7 @@
 = turbo_frame_tag dom_id(@event) do
   h1.text-3xl.text-strong.mb-2
     = yield :title
-  = button_link "upravit", edit_event_path(@event)
+  = button_link_to "upravit", edit_event_path(@event)
 
   #details
     div = "od #{@event.date_from} do #{@event.date_to}"
