--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -1,7 +1,7 @@
 - content_for :title, @recipe.name
 
 div
-  = button_link "upravit", edit_recipe_path(@recipe), class: "mt-0"
+  = button_link_to "upravit", edit_recipe_path(@recipe), class: "mt-0"
 
   - if @recipe.deletable?
     = action_button_to "smazat", recipe_path(@recipe), method: :delete, data: { turbo_confirm: "Opravdu chcete smazat recept?" }
@@ -29,22 +29,23 @@ div
         = action_button_to "přidat do oblíbených", liked_recipes_path(recipe_id: @recipe), method: :post, icon: "heart"
 
 .md:grid.md:grid-cols-3
-  div
-    = turbo_frame_tag "#{dom_id(@recipe)}-ingredients"
-      = table @recipe.recipe_ingredients do |t|
-        = t.column :název do |r_ingredient|
-          = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
-        = t.column "množství na #{@portion_count} porcí" do |r_ingredient|
-          = formatted_amount_with_unit(r_ingredient, @portion_count)
-          = " | "
-          = (r_ingredient.amount * @portion_count).round(1)
-          = " "
-          = r_ingredient.ingredient.measurement&.name
-    
+  = turbo_frame_tag "#{dom_id(@recipe)}-ingredients", class: "turbo-frame-complete:col-span-12"
+    = table @recipe.recipe_ingredients.sort_by(&:recipe_amount).reverse do |t|
+      = t.column :název do |r_ingredient|
+        = link_to r_ingredient.ingredient.name, r_ingredient.ingredient
+      = t.column "množství na #{@portion_count} porcí" do |r_ingredient|
+        = formatted_amount_with_unit(r_ingredient, @portion_count)
+        = " | "
+        = (r_ingredient.amount * @portion_count).round(1)
+        = " "
+        = r_ingredient.ingredient.measurement&.name
+  
+    = button_link_to "upravit suroviny", recipe_ingredients_path(recipe_id: @recipe.id)
+    br
     | zobrazit pro
     br
-    = button_link "1 porci", recipe_path(@recipe, portion_count: 1)
-    = button_link "12 porcí", recipe_path(@recipe, portion_count: 12)
+    = button_link_to "1 porci", recipe_path(@recipe, portion_count: 1)
+    = button_link_to "12 porcí", recipe_path(@recipe, portion_count: 12)
     = form_tag recipe_path(@recipe), method: :get, class: "inline", data: {controller: "form", "form-debounce-timeout-value": 0, "turbo-frame": "#{dom_id(@recipe)}-ingredients-"} do
         = text_field_tag :portion_count, params[:portion_count], class: "w-12 h-8 me-2 border border-green-600 rounded-md", data: {action: "input->form#submit"}, autofocus: true, onfocus: "this.setSelectionRange(this.value.length,this.value.length);"
         | porcí
@@ -58,4 +59,4 @@ div
     
 
 
-/ = button_link "pdf", recipe_path(@recipe, format: :pdf)
+/ = button_link_to "pdf", recipe_path(@recipe, format: :pdf)
