--- a/app/views/recipes/show.html.slim
+++ b/app/views/recipes/show.html.slim
@@ -14,8 +14,7 @@ div
     = action_button_to "zveřejnit", published_recipes_path(recipe_id: @recipe.id), method: :post
 
 #details.mt-3.mb-4
-  p
-    = @recipe.category&.name
+  p.italic = @recipe.category&.name
   div.mt-2
     div.flex.flex-wrap id="#{dom_id(@recipe)}-labels"
       - @recipe.labels.each do |label|
