--- a/app/views/recipes/_tasks.html.slim
+++ b/app/views/recipes/_tasks.html.slim
@@ -1,9 +1,10 @@
 div
-  h2.text-2xl = "úkoly"
+  h2.text-2xl.inline-block.me-3 = "úkoly"
+  span.float-end = button_link_to "upravit úkoly", recipe_path(recipe, edited_section: :tasks)
   
   .grid.grid-cols-5.font-bold
     span = "název"
-    span.col-span-3 = "popis"
+    span.col-span-2 = "popis"
     span = "dní před vařením"
 
   - recipe.tasks.each do |task|
@@ -15,4 +16,4 @@ div
           = " "
           = t("day", count: task.days_before_cooking)
 
-  = button_link_to "upravit úkoly", recipe_path(recipe, edited_section: :tasks)
+  
